--- a/client/vibedagain/src/App.css
+++ b/client/vibedagain/src/App.css
@@ -1,38 +1,32 @@
 .App {
+  display: flex;
+  flex-direction:column;
+  justify-content: center;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.userinputs {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
+  border: 1px solid black;
+  height: 50vh;
+  width:40vw;
 }
 
-.App-link {
-  color: #61dafb;
+.displaydata {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  overflow: scroll;
+  border: 1px solid black;
+  height: 50vh;
+  width: 70vw;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.maincontainer {
+  display:flex;
+  flex-direction: row;
 }
